More older API versions now supported

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: NoTP
 main: jazzwhistle\NoTP\Main
 version: 1.0.1
-api: [1.4.0, 2.0.0]
+api: [1.13.0, 1.14.0, 2.0.0]
 load: POSTWORLD
 author: awzaw
 website: https://github.com/awzaw
