API and Version bump

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: NoTP
 main: jazzwhistle\NoTP\Main
-version: 1.0.3
-api: [2.0.0]
+version: 1.0.4
+api: [2.0.0, 3.0.0-ALPHA1]
 load: POSTWORLD
 author: awzaw
 website: https://github.com/awzaw
