--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: NoTP
 main: awzaw\notp\Main
-version: 1.0.5
-api: [2.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2, 3.0.0-ALPHA3, 3.0.0-ALPHA4, 3.0.0-ALPHA5]
+version: 1.0.6
+api: [3.0.0-ALPHA5, 3.0.0-ALPHA6]
 load: POSTWORLD
 author: awzaw
 website: https://github.com/awzaw
