tested with 3.0.0-ALPHA8

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: NoTP
 main: awzaw\notp\Main
-version: 1.0.6
-api: [3.0.0-ALPHA7]
+version: 1.0.6-1.alpha8
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8]
 load: POSTWORLD
 author: awzaw
 website: https://github.com/awzaw
