Updated for 3.0.0-ALPHA11, version bump

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: NoTP
 main: awzaw\notp\Main
-version: 1.0.6-3
-api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10]
+version: 1.0.6-4
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11]
 load: POSTWORLD
 author: awzaw
 website: https://github.com/awzaw
