--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: NoTP
 main: awzaw\notp\Main
-version: 1.0.6-5
-api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11, 3.0.0-ALPHA12]
+version: 1.0.7
+api: [3.0.0]
 load: POSTWORLD
 author: awzaw
 website: https://github.com/awzaw
